# MachineLearningCoursework

./: .gitignore  README.md
AirPred/: .gitignore  README.md  lstm_seq_pred.py  pyproject.toml
AirPred/plots/: README.md
IndoorLocalization/: README.md  pyproject.toml
IndoorLocalization/src/: IndoorLocalization.py  MLP.py  SVM.py
IndoorLocalization/src/DataLoader/: DataSplit.py
IndoorLocalization/src/Network/: MultiLayerPerceptron.py
InvertedDoublePendulum/: README.md  main.py  pylintrc.toml  pyproject.toml
InvertedDoublePendulum/networks/: continuous_ppo.py
UrbanAirQualityPred/: LSTMModule.py  README.md  RNN.py  SupportVectorRegression.py  UrbanAirQualityPred.py  lstm_module.py  main.py  rnn_pred.py
