[project]
name = ""
version = ""
description = ""
authors = [
    {name = "YoshidaRyoko", email = "alquequenxe@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.3.2",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "autopep8>=2.0.4",
    "pylint>=3.0.2",
    "setuptools>=68.2.2",
    "pandas>=2.1.2",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "MIT"}

