[project]
name = ""
version = ""
description = ""
authors = [
    {name = "YoshidaRyoko", email = "alquequenxe@gmail.com"},
]
dependencies = [
    "gymnasium[mujoco]>=0.29.1",
    "pylint>=3.0.2",
    "autopep8>=2.0.4",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "MIT"}

